--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <br/>
                     <p>E veja resultados expressivos dia após dia</p>
                     <br/>
-                    <img src="images/mockup.svg" alt="">
+                    <img src="images/port.png" alt="">
                 </div><!--mockup-->
 
             </div><!--center-->
